feat: menu implementation without function